<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- First Question -->
    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques1"
        android:textStyle="bold"
        android:textColor="#6750A3"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/option1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_optionA"/>

        <RadioButton
            android:id="@+id/option1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_optionB"/>

        <RadioButton
            android:id="@+id/option1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_optionC"/>

        <RadioButton
            android:id="@+id/option1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_optionD"/>

    </RadioGroup>


    <!-- Second Question -->
    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques2"
        android:textStyle="bold"
        android:textColor="#6750A3"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/checkboxContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/question2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/option2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_optionA"/>

        <CheckBox
            android:id="@+id/option2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_optionB"/>

        <CheckBox
            android:id="@+id/option2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_optionC"/>

        <CheckBox
            android:id="@+id/option2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_optionD"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxContainer"
        app:rippleColor="#4CAF50"
        app:strokeColor="#4CAF50" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#A61111"
        android:text="Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
